--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: CommonTrend
-Version: 0.6-1
+Version: 0.6-2
 Date: 2011-11-13
 Title: Extract and plot common trends from a cointegration system.
         Calculate P-value for Johansen Statistics.
@@ -7,8 +7,18 @@ Author: Fan Yang
 Maintainer: Fan Yang <yfno1@msn.com>
 Depends: R (>= 2.10)
 Imports: methods,MASS, urca
-Description: Directly extract and plot common trends from cointegration systems using different approaches, currenctly including Kasa (1992) and Gonzalo and Granger (1995). The approach proposed by Gonzalo and Granger, also known as Permanent-Transitory Decomposition, is widely used in Macroeconomics and Market Microstructure literature. The Kasa's approach has a nice property that it only uses the super consistent estimater: the cointegration vector 'beta'. In addition, this package can also calculate P-value for Johansen Statistics according to the approximation method proposed by Doornik(1998).
+Description: Directly extract and plot stochastic common trends from
+        the cointegration system using different approaches, currently
+        including Kasa (1992) and Gonzalo and Granger (1995). The
+        approach proposed by Gonzalo and Granger, also known as
+        Permanent-Transitory Decomposition, is widely used in
+        macroeconomics and market microstructure literature. The Kasa's
+        approach, on the other hand, has a nice property that it only
+        uses the super consistent estimator: the cointegration vector
+        'beta'. In addition, this package can also calculate P-value
+        for Johansen Statistics according to the approximation method
+        proposed by Doornik (1998).
 License: GPL (>= 2)
-Packaged: 2011-12-06 23:23:38 UTC; <e6><9d><a8><e8><bf><87>
+Packaged: 2012-08-17 23:48:28 UTC; yangguodaxia
 Repository: CRAN
-Date/Publication: 2011-12-07 10:13:40
+Date/Publication: 2012-08-18 05:39:28
